runtimes/pipeline1-runtime/user-namespaces/ingress-webhook-eventsource.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-eventsource
  namespace: user-pipelines
spec:
  rules:
  - host: user-webhook.pipeline1.119-8-99-179.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: webhook-eventsource
            port:
              number: 12000
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-eventsource
  namespace: user-pipelines
spec:
  ports:
  - port: 12000
    protocol: TCP
    targetPort: 12000
  selector:
    eventsource-name: webhook
